--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==3.0.3
+django==3.0.7
 psycopg2-binary==2.8.4
 python-jose==3.1.0
 
@@ -6,3 +6,5 @@ djangorestframework==3.11.0
 
 mwparserfromhell==0.5.4
 requests==2.23.0
+BeautifulSoup4==4.9.1
+lxml==4.5.2
